--- a/apps/mint-ui/package.json
+++ b/apps/mint-ui/package.json
@@ -14,6 +14,7 @@
     "@skeletonlabs/tw-plugin": "^0.4.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.14",
     "@tsconfig/svelte": "^5.0.5",
     "@types/node": "^24.6.0",
     "autoprefixer": "^10.4.21",
