--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "python-dotenv>=1.1.1",
   "django-simple-history>=3.7.0",
   "drf-flex-fields>=1.0.2",
+  "django-filter>=25.2",
 ]
 
 [project.optional-dependencies]
